--- a/style.css
+++ b/style.css
@@ -42,3 +42,17 @@ body{
     font-size: 23px;
     margin: 15px;
 }
+.play_dj_button{
+
+    width: 180px;
+    font-size:25px;
+
+}
+
+canvas{
+
+border: 5px solid black;
+border-radius: 20px;
+margin-top: 100px;
+
+}
